Updated Testclasses + ModifierEffectPicker tweaks