@@ -1,7 +1,6 @@
 package com.example.quiz.service.user;
 
-import com.example.quiz.exception.ResourceNotFoundException;
-import com.example.quiz.model.dto.AnswerDto;
+import com.example.quiz.model.dto.QuestionDto;
 import com.example.quiz.model.entity.*;
 import com.example.quiz.repository.QuestionRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -11,89 +10,124 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
-public class UserQuestionServiceTest {
-
-    @Mock
-    private QuestionRepository questionRepository;
+class UserQuestionServiceTest {
 
     @InjectMocks
     private UserQuestionService userQuestionService;
 
+    @Mock
+    private QuestionRepository questionRepository;
+
     @BeforeEach
-    public void setup() {
+    void setUp() {
         MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    public void testGetRandomQuestion() {
+    void testConvertToDto() {
         // Arrange
+        CorrectAnswer correctAnswer = new CorrectAnswer();
+        correctAnswer.setAnswerText("Correct Answer");
+
+        MockAnswer mockAnswer1 = new MockAnswer();
+        mockAnswer1.setAnswerText("Mock Answer 1");
+
+        MockAnswer mockAnswer2 = new MockAnswer();
+        mockAnswer2.setAnswerText("Mock Answer 2");
+
         Question question = new Question();
-        question.setId(1L);
         question.setQuestionText("Sample Question");
-        when(questionRepository.findRandomQuestion()).thenReturn(question);
+        question.setCorrectAnswer(correctAnswer);
+        question.setMockAnswers(List.of(mockAnswer1, mockAnswer2));
+
+        // Act
+        QuestionDto result = userQuestionService.convertToDto(question);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals("Sample Question", result.getQuestionText());
+        assertEquals("Correct Answer", result.getRealAnswer());
+        assertTrue(result.getMockAnswers().containsAll(Arrays.asList("Mock Answer 1", "Mock Answer 2")));
+    }
+
+    @Test
+    void testGetRandomQuestion_NoTopic() {
+        // Arrange
+        Question mockQuestion = new Question();
+        when(questionRepository.findRandomQuestion()).thenReturn(mockQuestion);
 
         // Act
         Question result = userQuestionService.getRandomQuestion();
 
         // Assert
         assertNotNull(result);
-        assertEquals(1L, result.getId());
-        assertEquals("Sample Question", result.getQuestionText());
+        assertEquals(mockQuestion, result);
+        verify(questionRepository, times(1)).findRandomQuestion();
     }
 
     @Test
-    public void testGetRandomQuestionExcludingCompleted_Success() {
+    void testGetRandomQuestion_WithTopic() {
         // Arrange
-        Set<Long> completedQuestionIds = new HashSet<>(Arrays.asList(1L, 2L));
-        Question question = new Question();
-        question.setId(3L);
-        question.setQuestionText("New Question");
-        Pageable pageable = PageRequest.of(0, 1);
-        Page<Question> page = new PageImpl<>(Collections.singletonList(question), pageable, 1);
+        String topic = "Science";
+        Question mockQuestion = new Question();
+        when(questionRepository.findRandomQuestion(topic)).thenReturn(mockQuestion);
 
-        when(questionRepository.findRandomQuestionExcludingCompleted(completedQuestionIds, pageable)).thenReturn(page);
+        // Act
+        Question result = userQuestionService.getRandomQuestion(topic);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(mockQuestion, result);
+        verify(questionRepository, times(1)).findRandomQuestion(topic);
+    }
+
+    @Test
+    void testGetRandomQuestionExcludingCompleted() {
+        // Arrange
+        Set<Long> completedQuestionIds = Set.of(1L, 2L);
+        Question mockQuestion = new Question();
+        Page<Question> questionPage = new PageImpl<>(List.of(mockQuestion));
+        Pageable pageable = Pageable.ofSize(1);
+        when(questionRepository.findRandomQuestionExcludingCompleted(completedQuestionIds, pageable)).thenReturn(questionPage);
 
         // Act
         Question result = userQuestionService.getRandomQuestionExcludingCompleted(completedQuestionIds);
 
         // Assert
         assertNotNull(result);
-        assertEquals(3L, result.getId());
-        assertEquals("New Question", result.getQuestionText());
+        assertEquals(mockQuestion, result);
+        verify(questionRepository, times(1)).findRandomQuestionExcludingCompleted(completedQuestionIds, pageable);
     }
 
     @Test
-    public void testGetRandomQuestionExcludingCompleted_NotFound() {
+    void testGetRandomQuestionExcludingCompleted_EmptyPage() {
         // Arrange
-        Set<Long> completedQuestionIds = new HashSet<>(Arrays.asList(1L, 2L));
-        Pageable pageable = PageRequest.of(0, 1);
-        Page<Question> page = Page.empty();
+        Set<Long> completedQuestionIds = Set.of(1L, 2L);
+        Page<Question> emptyPage = new PageImpl<>(Collections.emptyList());
+        Pageable pageable = Pageable.ofSize(1);
+        when(questionRepository.findRandomQuestionExcludingCompleted(completedQuestionIds, pageable)).thenReturn(emptyPage);
 
-        when(questionRepository.findRandomQuestionExcludingCompleted(completedQuestionIds, pageable)).thenReturn(page);
+        // Act
+        Question result = userQuestionService.getRandomQuestionExcludingCompleted(completedQuestionIds);
 
-        // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> {
-            userQuestionService.getRandomQuestionExcludingCompleted(completedQuestionIds);
-        });
+        // Assert
+        assertNull(result);
+        verify(questionRepository, times(1)).findRandomQuestionExcludingCompleted(completedQuestionIds, pageable);
     }
 
     @Test
-    public void testCreateQuestionWithShuffledAnswersDto() {
+    void testCreateQuestionGameEvent() {
         // Arrange
-        Question question = new Question();
-        question.setId(1L);
-        question.setQuestionText("Sample Question");
+        CorrectAnswer correctAnswer = new CorrectAnswer();
+        correctAnswer.setId(1L);
+        correctAnswer.setAnswerText("Correct Answer");
 
         MockAnswer mockAnswer1 = new MockAnswer();
         mockAnswer1.setId(2L);
@@ -103,22 +137,22 @@ public class UserQuestionServiceTest {
         mockAnswer2.setId(3L);
         mockAnswer2.setAnswerText("Mock Answer 2");
 
-        MockAnswer mockAnswer3 = new MockAnswer();
-        mockAnswer3.setId(4L);
-        mockAnswer3.setAnswerText("Mock Answer 3");
+        Question question = new Question();
+        question.setId(100L);
+        question.setQuestionText("Sample Question");
+        question.setCorrectAnswer(correctAnswer);
+        question.setMockAnswers(List.of(mockAnswer1, mockAnswer2));
 
-        question.setMockAnswers(Arrays.asList(mockAnswer1, mockAnswer2, mockAnswer3));
-
-        AnswerDto correctAnswerDto = new AnswerDto(1L, "Correct Answer");
-        question.setCorrectAnswer(new CorrectAnswer(correctAnswerDto.getText(), question));
+        QuizState quizState = new QuizState();
 
         // Act
-        QuestionGameEvent result = userQuestionService.createQuestionGameEvent(question, new QuizState());
+        QuestionGameEvent result = userQuestionService.createQuestionGameEvent(question, quizState);
 
         // Assert
         assertNotNull(result);
+        assertEquals(quizState, result.getQuizState());
+        assertEquals(100L, result.getQuestionId());
         assertEquals("Sample Question", result.getQuestionText());
-        assertEquals(1L, result.getQuestionId());
-        assertEquals(4, result.getShuffledAnswers().size());
+        assertEquals(3, result.getShuffledAnswers().size()); // Correct + 2 mock answers
     }
 }
